<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="title_activity_main" translatable="false">Finanças</string>
    <string name="app_name">Finanças</string>
    <string name="nav_header_title" translatable="false">Vagner Bom Jesus</string>
    <string name="nav_header_subtitle" translatable="false">vagneripg@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <string name="action_settings">Definições</string>
    <string name="saldo">Saldo:</string>
    <string name="receitas">Receitas:</string>
    <string name="despesas">Despesas:</string>
    <string name="nova_receita">NOVA RECEITA</string>
    <string name="nova_despesa">NOVA DESPESA</string>
    <string name="action_sobre">Sobre</string>
    <string name="action_terminar">Terminar</string>
    <string name="geral">Geral</string>
    <string name="title_activity_nova_despesa">Nova Despesa...</string>
    <string name="title_activity_nova_receita">Nova Receita...</string>
    <string name="title_activity_sobre">Sobre Programador</string>

    <string name="_284_82" translatable="false">284,82€</string>
    <string name="_24_78" translatable="false">24,78€</string>
    <string name="_1024_78" translatable="false">1024,78€</string>

    <string name="desenvolvida_por">DESENVOLVIDA POR:</string>
    <string name="programacao_avancada">Programação Avançada</string>
    <string name="estg_ipg_ei">ESTG-IPG | Engenharia Informática</string>
    <string name="contact">Contacto: vagneripg@gmail.com</string>
    <string name="vagner_bom_jesus">Vagner Bom Jesus</string>
    <string name="_2018_2019" translatable="false">2018/2019</string>
    <string name="boas" translatable="false">___________________________</string>
    <string name="vbj">Vagner Foto</string>
    <string name="redeSociais">Rede Social</string>
    <string name="facenook" translatable="false">Facebook</string>

    <string name="inserir_despesa">Inserir Despesa</string>
    <string name="valor_despesa">Valor €</string>
    <string name="valor">Valor: </string>
    <string name="descricao_despesa">Descrição da despesa (opcional)</string>
    <string name="descricao_Edite">Descrição (opcional)</string>
    <string name="tipo">Despesa / Receita</string>
    <string name="designacao">Descrição:</string>
    <string name="categoria">Categoria:</string>
    <string name="escolha_a_data">Data:</string>
    <string name="cancelar">Cancelar</string>
    <string name="adcionar" translatable="false">+</string>
    <string name="valor_euros">valor (€)</string>
    <string name="inserir_receita">INSERIR RECEITA</string>
    <string name="descricao_receita">Descrição da receita (opcional)</string>
    <string name="erro_smsValor">Inserir Valor!</string>
    <string name="title_activity_listar_todos">Listar Todos ....</string>
    <string name="_1996">1996</string>
    <string name="erro_editTextDesignacaoReceita">Campo obrigatório</string>
    <string name="insira_um_valor_maior_que_0">Insira um valor maior que 0</string>
    <string name="registo_inserido_success">Registo inserido com sucesso!</string>
    <string name="anular_registo">Anular</string>
    <string name="erro_eliminar_registo">Erro ao eliminar registo...</string>
    <string name="registo_eliminado_success">Registo eliminado com sucesso!</string>
    <string name="sms_alert_inserir_registos_data_futura">Não pode inserir registos para datas futuras!</string>
    <string name="action_ListarTodos">Listar por Todos</string>
    <string name="action_opcao">Opções</string>
    <string name="action_Eliminar">Eliminar Registos</string>
    <string name="action_Editar">Editar</string>
    <string name="title_activity_eliminar">Eliminar</string>
    <string name="title_activity_editar">Editar</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>

    <string name="qto_pode_gastar_mes">Quanto pode gastar por mês?</string>
    <string name="listar_por_dia">Listar por dia</string>
    <string name="listar_por_mes">Listar por mês</string>
    <string name="listar_por_ano">Listar por ano</string>
    <string name="listar_todos_1">Listar todos</string>
    <string name="definir_orca">Definir orçamento</string>
    <string name="acerca">Acerca</string>
    <string name="gerir_cat">Gerir Categorias</string>
    <string name="sms_cat_n_inserida">Categoria não inserida!</string>
    <string name="cancelar_dialog_cat">Cancelar</string>
    <string name="inserir_1">Inserir</string>
    <string name="inserir_cat_dialog">Inserir Categoria</string>
    <string name="adicione_uma_categoria">Por favor, adicione uma categoria!</string>
    <string name="ano_dois_pontos">Ano:</string>
    <string name="dia_dois_pontos">Dia:</string>
    <string name="mes_dois_pontos">Mês:</string>

    <string name="listar_ano">Listar por Ano...</string>
    <string name="listar_mes">Listar por Mês...</string>
    <string name="listar_dia">Listar por Dia...</string>


    <string name="show_saldo_main" translatable="false">TextView</string>
    <string name="show_despesas_main" translatable="false">TextView</string>
    <string name="show_receitas_main" translatable="false">TextView</string>
    <string name="insira_a_designa_o_da_receita">Insira a designação da receita</string>
    <string name="insira_o_valor_da_receita">Insira o valor da receita</string>
    <string name="quadro_descritivo_finan_as_pessoais">Quadro descritivo finanças pessoais:</string>
    <string name="valor_definido_or_amento_mensal">Valor definido orçamento mensal:</string>
    <string name="resultados_ano">Resultados Ano</string>
    <string name="resultados_m_s">Resultados Mês</string>
    <string name="resultados_dia">Resultados Dia</string>
    <string name="todos">Todos</string>
    <string name="atualizar_despesa">ATUALIZAR DESPESA</string>

    <string name="atualizar_receita">ATUALIZAR RECEITA</string>
    <string name="cancelar2">cancelar</string>
    <string name="cate_ja_exist">Categoria já existente!</string>
    <string name="Nova_receita_actv">Nova Receita...</string>

    <string name="definir_button">Definir</string>
    <string name="sms_orc_n_definido">Não foram inseridos valores</string>
    <string name="sms_cat_inserida_success">Categoria inserida com sucesso!</string>
    <string name="sms_error_inserir_cat_db">Erro ao inserir a categoria na BD!</string>
    <string name="sms_nao_foi_possivel_obter_id">Não foi possível obter o ID</string>
    <string name="insira_um_valor">Insira um valor!</string>
    <string name="registo_alterado_com_sucesso">Registo alterado com sucesso!</string>
    <string name="erro_alterar_registo">Erro ao alterar registo</string>
    <string name="eliminar_categoria">Eliminar categoria</string>
    <string name="tem_a_certeza">Tem a certeza?</string>
    <string name="cat_eliminada_success">Categoria eliminada com sucesso!</string>
    <string name="erro_eliminar_cat">Erro ao eliminar categoria...</string>
    <string name="sim">SIM</string>
    <string name="nao1">NÃO</string>
    <string name="nao_foram_encontrados_registos">Não foram encontrados registos para o ano de</string>
    <string name="nao_foram_encontrados_registos_data">Não foram encontrados registos para a data de</string>
    <string name="nao_foram_encontrados_registos_para">Não foram encontrados registos para</string>
    <string name="de">de</string>
    <string name="janeiro">janeiro</string>
    <string name="fevereiro">fevereiro</string>
    <string name="marco">março</string>
    <string name="abril">abril</string>
    <string name="maio">maio</string>
    <string name="junho">junho</string>
    <string name="julho">julho</string>
    <string name="agosto">agosto</string>
    <string name="setembro">setembro</string>
    <string name="outubro">outubro</string>
    <string name="novembro">novembro</string>
    <string name="dezembro">dezembro</string>
    <string name="nao_foram_encontrados_registos_todos">Não foram encontrados registos</string>
    <string name="valor_orca_definido_sucesso">Limite de orçamento definido com sucesso!</string>
    <string name="erro_inserir_valor_bd">Erro ao inserir valor na BD</string>
    <string name="ultrapassou_limit_orca_mensal">Ultrapassou o seu limite de orçamento mensal!</string>
    <string name="euros_atingir_limit_orca_mensal">€ para atingir o limite de orçamento mensal!</string>
    <string name="atingiu_limit_orca_mensal">Atingiu o limite de orçamento mensal!</string>
    <string name="erro_inserir_registo_bd">Erro ao inserir registo na BD!</string>
    <string name="escolha_uma_opcao">Escolha uma opção</string>
    <string name="atualizar_eliminar_registo">Atualizar ou eliminar registo?</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancelar_adapter">Cancelar</string>
    <string name="sobre">Sobre</string>
    <string name="nova_despesa_act">Nova Despesa...</string>
    <string name="definicoes">Definições</string>
    <string name="listar_todos">Listar Todos...</string>
    <string name="editar_receita">Editar Receita...</string>
    <string name="editar_despesa">Editar Despesa...</string>
    <string name="Editar_receita">Editar Receita</string>
    <string name="Editar_despesa">Editar Despesa</string>
    <string name="ano">Ano</string>
    <string name="text_definicoes">O valor do saldo é a diferença entre o valor das receitas e o valor das despesas e é apresentado sempre o valor atualizado, independentemente do tipo de visualização escolhido (Ano, Mês, Dia).</string>
    <string name="text2_defenicoes">Nas opções Listar Dia, Listar Mês, Listar Ano e Listar Todos, clique sobre a receita/despesa para poder eliminá-la ou alterá-la.</string>
    <string name="cat_receitas">Categorias Receitas</string>
    <string name="cat_despesas">Categorias Despesas</string>
    <string name="toque_na_cat_eliminar">Toque na categoria que pretende eliminar</string>
    <string name="deslize_ver_cat_restantes">Deslize para ver as restantes categorias</string>
    <string name="nova_cat">Nova Categoria</string>


    <string name="elminarRegisto">Alerta, Eliminar Registo</string>
    <string name="alertaEliminar">Tem certeza que deseja Eliminar!   </string>
    <string name="naorecopera"> Ao eliminar não poderas o recoperar.</string>


    <string name="inserir">Inserir</string>
    <string name="alterar">Alterar</string>

    <string name="title_activity_inserir_livro">List</string>
    <string name="descricaoDespesa">Título</string>


    <string name="preecha_titulo">Preencha o título</string>
    <string name="preecha_pagina">Preecha a página</string>
    <string name="pagina_invalida">Página inválida</string>
    <string name="erro_guardar_livro">Erro: Não foi possível guardar o Registo!</string>
    <string name="livro_guardado_sucesso">Registo guardado com suceeso</string>
    <string name="title_activity_alterar_livro">AlterarLivroActivity</string>
    <string name="nao_e_possimve_eliminar">Erro: não foi possível apagar o Registo</string>
    <string name="title_activity_listar_todos_tipo_receita">ListarTodosTipoReceitaActivity</string>

    <string name="TITULO_receita">Listar Receita...</string>
    <string name="TITULO_despesa">Listar Despesa...</string>
    <string name="acion_receita">Listar Receita</string>
    <string name="acion_despesa">Listar Despesa</string>
    <string name="receita">Receita</string>
    <string name="despesa">Despesa</string>
    <string name="title_activity_listar_todo_tipo_receita">ListarTodoTipoReceitaActivity</string>
</resources>
