<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_ltodosR"
            android:icon="@drawable/ic_menu_sort_by_size"
            android:title="@string/acion_receita" />
        <item
            android:id="@+id/nav_ltodosD"
            android:icon="@drawable/ic_menu_sort_by_size"
            android:title="@string/acion_despesa" />

        <item
            android:id="@+id/nav_gestcategorias"
            android:icon="@drawable/ic_menu_sort_by_size"
            android:title="@string/gerir_cat" />
    </group>

    <item android:title="@string/acerca">
        <menu>
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_info_details"
                android:title="@string/sobre" />
        </menu>
    </item>

</menu>
