<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Editar"
    android:background="#e7e7e7"
    tools:showIn="@layout/activity_editar">

    <Button
        android:id="@+id/buttonGuardarEitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Margin50"
        android:layout_marginLeft="@dimen/Margin50"
        android:layout_marginTop="@dimen/Margin50"
        android:background="@drawable/buttoncancelar_shape"
        android:onClick="guardar"
        android:text="@string/guardar"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/Margin32"
        android:text="@string/valor"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/Margin32"
        android:text="@string/designacao"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />


    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/Margin32"
        android:text="@string/categoria"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textViewSelectedDateDespesja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fa_margin"
        android:layout_marginLeft="@dimen/fa_margin"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/fa_margin"
        android:layout_marginRight="@dimen/fa_margin"
        android:textSize="24sp"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ContentDescription"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/Margin32"
        android:text="@string/escolha_a_data"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ContentDescription"
        android:layout_width="@dimen/Margin50"
        android:layout_height="@dimen/Margin50"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_day"
        android:contentDescription="@string/todo" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Margin50"
        android:layout_marginLeft="@dimen/Margin50"
        android:layout_marginTop="@dimen/Margin50"
        android:layout_marginEnd="@dimen/Margin50"
        android:layout_marginRight="@dimen/Margin50"
        android:background="@drawable/buttoncancelar_shape"
        android:onClick="cancel"
        android:text="@string/cancelar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonGuardarEitado"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="@dimen/Margin243"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fa_margin"
        android:layout_marginLeft="@dimen/fa_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginEnd="24sp"
        android:layout_marginRight="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditValor"
            android:layout_width="@dimen/Margin233"
            android:layout_height="wrap_content"
            android:hint="@string/valor_euros"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="@dimen/Margin228"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fa_margin"
        android:layout_marginLeft="@dimen/fa_margin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/fa_margin"
        android:layout_marginRight="@dimen/fa_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEditeDesinacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao_Edite"
            android:inputType="text|textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="@dimen/Margin221"
        android:layout_height="@dimen/Margin54"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textCategoria"
            android:layout_width="@dimen/Margin200"
            android:layout_height="@dimen/Margin42"
            android:hint="@string/tipo"
            android:inputType="textFilter|text|textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>